Sat Sep 25 22:48:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_DLDFLAGS): fix quoting.

Sat Sep 25 10:30:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_DLDFLAGS): use -unexported_symbol only
	  when available.  http://trac.macports.org/ticket/26341

Sat Oct 16 10:54:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (CPP): already used in .c.i rule.

	* cygwin/GNUmakefile.in (DLLWRAP, WINDRES): add --driver-name and
	  --preprocessor options explicitly.  [ruby-core:32776]

Thu Sep 23 09:01:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_cref_push): no outer cref is needed for proc
	  from method.  Bug #3786, Bug #3860, [ruby-core:32501]

Wed Oct  6 11:52:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (fptr_finalize): write_mutex might have been destroyed
	  already in finalization phase, as the order of finalizers is not
	  guaranteed.  rb_mutex_t should be used in place of Mutex object
	  in the future.

Sun Sep 19 13:44:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_SO): fix an oversight of replace
	  RUBY_INSTALL_NAME with RUBY_SO_NAME.  a patch from Jeremy Evans
	  at [ruby-core:32474].

Sun Aug 29 12:19:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (load_failed): should honor encoding.  [ruby-core:31915]

Fri Aug 27 12:26:23 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* object.c (rb_obj_class): remove mention of obsolete method.
	  a patch from Run Paint Run Run at [ruby-core:31842].

Thu Aug 26 10:37:00 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regint.h (OnigStackIndex): the type should be intptr_t.
	  Original Oniguruma assumes the size of long and that of void *
	  are equal, but it's not true on LLP64 platform: mswin64.
	  originally patched by shintaro kuwamoto [ruby-dev:42133]

Thu Aug 26 10:38:11 2010  Yutaka Kanemoto  <kanemoto@ruby-lang.org>
