@@ -429,6 +429,8 @@ end
 class A
   class << B
   end
+  class << d = Object.new
+  end
 end
     CODE
 
